enlarged about text size and corrected mobile link spacing

--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ body {
 }
 body {
   background-color: #F7DD23;
-  border: 10px solid white;
+  border: 4px solid white;
   min-height: 100%;
 }
 .container {
@@ -84,10 +84,10 @@ header .logo h1 {
 }
 header .nav-links {
   display: flex;
+  margin: 0 5% 0 0;
   align-items: center;
   max-width: 100%;
   text-align: center;
-  margin: 0;
   color: black;
 }
 @media only screen and (max-width: 600px) {
@@ -101,20 +101,19 @@ header .nav-links {
   }
 }
 header .nav-links a {
-  margin: 0 1.2rem;
+  margin: 0;
   font-size: 1.3rem;
   width: 8rem;
   height: 1.5rem;
   font-size: 1.7rem;
-  color: black;
   font-weight: bold;
   line-height: 1.5rem;
 }
 @media only screen and (max-width: 600px) {
   header .nav-links a {
-    font-size: 1rem;
-    width: 1rem;
+    width: 2rem;
     height: 1rem;
+    font-size: 1rem;
   }
 }
 header .nav-links .projects-link {
@@ -161,9 +160,13 @@ footer {
   text-align: center;
   align-self: center;
   place-self: center;
-  padding: 5%;
+  padding: 10%;
   line-height: 1.5;
+  font-size: 2.5rem;
 }
 #projects-carousel {
   place-self: center;
+}
+#contact {
+  font-size: 2rem;
 }
