--- a/less/global.less
+++ b/less/global.less
@@ -14,7 +14,7 @@
 
   body {
     background-color: #F7DD23;
-    border: 10px solid white;
+    border: 4px solid white;
     min-height: 100%;
   }
   
