--- a/less/home-page.less
+++ b/less/home-page.less
@@ -42,10 +42,15 @@
     text-align: center;
     align-self: center;
     place-self: center;
-    padding: 5%;
+    padding: 10%;
     line-height: 1.5;
+    font-size: 2.5rem;
 }
 
 #projects-carousel {
     place-self: center;
+}
+
+#contact {
+    font-size: 2rem;
 }
