--- a/less/navigation.less
+++ b/less/navigation.less
@@ -21,11 +21,10 @@ header {
     }
     .nav-links {
         display: flex;
-
+        margin: 0 5% 0 0;
         align-items: center;
         max-width: 100%;
         text-align: center;
-        margin: 0;
         color: black;
         @media only screen and (max-width: 600px) {
          flex-direction: column;
@@ -38,21 +37,19 @@ header {
         
 
         a {
-            margin: 0 1.2rem;
+            margin: 0;
             font-size: 1.3rem;
             width: 8rem;
             height: 1.5rem;
             font-size: 1.7rem;
-            color: black;
             font-weight: bold;
             line-height: 1.5rem;
 
+
             @media only screen and (max-width: 600px) {
-                width: 1rem;
+                width: 2rem;
                 height: 1rem;
                 font-size: 1rem;
-                width: 1rem;
-                height: 1rem;
               }
 
 
